feat: add delete possession endpoint
