# src/types/dataAccess.ts
@@ -4,4 +4,5 @@ export interface DataStore {
   getPossessions(): Possession[];
   createPossession(possessionRequest: CreatePossessionRequest): string;
   updatePossession(possession: Possession): void;
+  deletePossession(id: string): void;
 }
