# src/types/possessions.ts
@@ -13,4 +13,5 @@ export interface IPossessionService {
   getPossessions(): Possession[];
   createPossession(possessionRequest: CreatePossessionRequest): string;
   updatePossession(possession: Possession): void;
+  deletePossession(id: string): void;
 }
